# hpc-n-body

./: .gitignore  CMakeLists.txt  README.md
data/: demo_configuration.csv  demo_tree.csv  n10_d2_g1.csv
include/: barneshut.hpp  cuda_main.hpp  mpi_main.hpp  serial_main.hpp  space_configuration.hpp
scripts/: gen_data.sh  generate_configuration.py  visualize_configuration.py  visualize_tree.py
src/: barneshut.cpp  cuda_main.cpp  main.cpp  mpi_main.cpp  serial_main.cpp  space_configuration.cpp
